0.1.2 - iphone fixes - third test to fix keyboard pushing view up on Iphone

--- a/src/app/todo/add-todo/add-todo.component.scss
+++ b/src/app/todo/add-todo/add-todo.component.scss
@@ -67,7 +67,7 @@
         font-family: 'Lato', sans-serif;
         font-size: 16px;
         background: none;
-        border: none;
+        border: 1px solid #D5E974;
         color: white;
 
         &:focus {
